--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -34,7 +34,7 @@
           </svg>
         </span>
         <ul class="user-dropdown-menu" *ngIf="userMenuOpen()">
-          <li class="user-name">{{ authService.currentUser()?.familyName }}</li>
+          <li class="user-name">{{ authService.currentUser()?.name || authService.currentUser()?.familyName }}</li>
           <li><a class="main-nav-list" href="#" (click)="logout()">Logout</a></li>
         </ul>
       </span>
