--- a/src/app/features/daily-calendar/daily-calendar.html
+++ b/src/app/features/daily-calendar/daily-calendar.html
@@ -40,20 +40,27 @@
   <ng-container *ngIf="tasks$ | async as tasks">
     <ng-container *ngIf="tasks.length > 0; else noTasks">
       <ul>
-        <li *ngFor="let task of filterTasksForToday(tasks)" [ngClass]="'task type-' + mapTaskType(task.type)">
+        <li *ngFor="let task of filterTasksForToday(tasks)" [ngClass]="'task type-' + mapTaskType(task.type)" [class.task-done]="task.done">
           <div class="task-content">
             <div class="task-member-name"><strong>{{ task.memberName }}</strong></div>
-            <strong>{{ task.title }}</strong>
-            <p>{{ task.details }}</p>
+            <strong [class.task-title-done]="task.done">{{ task.title }}</strong>
+            <p [class.task-text-done]="task.done">{{ task.details }}</p>
             <ng-container *ngIf="task.type === 'class'; else normalTask">
-              <small>
+              <small [class.task-text-done]="task.done">
                 Class on {{ getWeekdayName(task.weekday ?? 0) }}
                 <span *ngIf="task.time">at {{ task.time }}</span>
               </small>
             </ng-container>
             <ng-template #normalTask>
-              <small>{{ task.date | friendlyDateTime }}</small>
+              <small [class.task-text-done]="task.done">{{ task.date | friendlyDateTime }}</small>
             </ng-template>
+            <button 
+              class="done-tag" 
+              [class.done-active]="task.done"
+              (click)="toggleTaskDone(task)"
+            >
+              Done
+            </button>
           </div>
         </li>
       </ul>
