--- a/src/app/features/auth/register/register.css
+++ b/src/app/features/auth/register/register.css
@@ -31,3 +31,22 @@ padding: 10px;
 input {
     padding: 5px;
 }
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.checkbox-container input[type="checkbox"] {
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+}
+
+.checkbox-container label {
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+}
