--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -8,24 +8,17 @@
   </div>
 
   <nav class="main-nav">
-    <div class="main-nav-list" *ngIf="authService.currentUser()">
-      <!-- Hamburger icon -->
-      <button class="nav-hamburger" (click)="toggleNavMenu()">
-        <i class="fa-solid fa-bars"></i>
-      </button>
-      
-      <!-- Navigation links - toggle visibility -->
-      <div class="nav-links" [class.open]="navMenuOpen()">
-        <span><a [routerLink]="['/daily-calendar']" (click)="closeNavMenu()">daily-Calendar</a></span>
-        <span><a [routerLink]="['/family-calendar']" (click)="closeNavMenu()">Calendar</a></span>
-        <span><a [routerLink]="['/family-members']" (click)="closeNavMenu()">family-members</a></span>
-        <span><a [routerLink]="['/shopping-list']" (click)="closeNavMenu()">shopping-list</a></span>
-        <span><a [routerLink]="['/family-evening']" (click)="closeNavMenu()">family-evening</a></span>
-      </div>
+    <!-- Desktop navigation links -->
+    <div class="desktop-nav-links" *ngIf="authService.currentUser()">
+      <span><a [routerLink]="['/daily-calendar']">daily-Calendar</a></span>
+      <span><a [routerLink]="['/family-calendar']">Calendar</a></span>
+      <span><a [routerLink]="['/family-members']">family-members</a></span>
+      <span><a [routerLink]="['/shopping-list']">shopping-list</a></span>
+      <span><a [routerLink]="['/family-evening']">family-evening</a></span>
+      <span *ngIf="authService.currentUser()?.isParent"><a [routerLink]="['/parent-settings']">Couple Time</a></span>
     </div>
+    
     <div class="header-right">
-      <span *ngIf="!authService.currentUser()"><a [routerLink]="['/register']">Register</a></span>
-      <span *ngIf="!authService.currentUser()"><a [routerLink]="['/login']">Login</a></span>
       <span *ngIf="authService.currentUser()" class="user-menu-container">
         <span class="user-icon" title="Logged in" (click)="toggleUserMenu()">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
